--- a/src/styles/_vendor-overrides.scss
+++ b/src/styles/_vendor-overrides.scss
@@ -182,7 +182,7 @@
 .ui-button {
   background: transparent;
   color: var(--color-text);
-  border-color: var(--color-text);
+  border-color: var(--color-island-border);
 
   &:focus {
     background: transparent;
@@ -193,7 +193,7 @@
   &:hover {
     background: var(--color-island-hover);
     color: var(--color-text);
-    border-color: var(--color-text);
+    border-color: var(--color-island-border);
   }
 
   &.call-out {
